--- a/conda-package/glimpse/meta.yaml
+++ b/conda-package/glimpse/meta.yaml
@@ -3,8 +3,10 @@ package:
   version: !!str 0.2.3
 
 source:
-  git_url: https://github.com/seansouthern/glimpse-project.git
+  #git_url: https://github.com/seansouthern/glimpse-project.git
+  git_url: ../.git
   git_tag: master
+
 
 #  patches:
    # List any patch files here
