--- a/conda-package/glimpse/meta.yaml
+++ b/conda-package/glimpse/meta.yaml
@@ -4,9 +4,10 @@ package:
 
 source:
   #git_url: https://github.com/seansouthern/glimpse-project.git
-  git_url: ../../
-  git_tag: master
-
+  #git_url: ../../
+  #git_tag: master
+  
+  path: ../../glimpse-project
 
 #  patches:
    # List any patch files here
