--- a/conda-package/glimpse/meta.yaml
+++ b/conda-package/glimpse/meta.yaml
@@ -3,9 +3,9 @@ package:
   version: !!str 0.2.3
 
 source:
-  #git_url: https://github.com/seansouthern/glimpse-project.git
-  #git_tag: master
-  path: ../../glimpse-project
+  git_url: https://github.com/seansouthern/glimpse-project.git
+  git_tag: master
+  #path: ../../glimpse-project
 
 #  patches:
    # List any patch files here
