Remove the test experiment from the conda build file. Don't need it to run every time I rebuild.

--- a/conda-package/glimpse/meta.yaml
+++ b/conda-package/glimpse/meta.yaml
@@ -78,7 +78,7 @@ test:
     # You can put test commands to be run here.  Use this to test that the
     # entry points work.
 
-    - glab -E -v --predictions -p imprint --corpus-name easy
+    #- glab -E -v --predictions -p imprint --corpus-name easy
 
   # You can also put a file called run_test.py in the recipe that will be run
   # at test time.
